Добавила секцию registration

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,7 @@
 @import './layout/program-section';
 @import './layout/section-teacher';
 @import './layout/reviews';
+@import './layout/registration';
 @import './layout/page-footer';
 
 @import './components/body';
