оттолкнулся от стаса 200 пх

--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -79,9 +79,12 @@
     margin-right: 17px;
   }
 }
+.features {
+  padding-top: 50px;
+}
 @media screen and (min-width: 1344px) {
   .features {
-    padding-top: 95.5px;
+    padding-top: 200px;
   }
   .features_list {
     width: 1344px;
