--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -3,9 +3,9 @@
         <h2 class="feedback__section-title">
             Отзывы выпускников
         </h2>
-        <div class="feedback__container container">
+        <div class="small-feedback__container">
             <button type="button" class="left__button">
-                <svg width="25px" height="5px">
+                <svg width="40px" height="15px">
                     <use href="/images/icons/icons-sprite.svg#icon-strelkavlevo"></use>
                 </svg>
             </button>
@@ -13,7 +13,7 @@
                 <div class="photo-and-icon__container">
                     <picture class="top-image__container">
                         <source media="(min-width: 768px)"
-                            srcset="./images/slider/slider-tablet6-min.jpg 1x, ./images/slider/slider-tablet6@2x-min.jpg 2x">
+                            srcset="/images/slider/slider-tablet6-min.jpg 1x, /images/slider/slider-tablet6@2x-min.jpg 2x">
 
                         <source media="(min-width: 320px)"
                             srcset="/images/slider/slider-mob-min.jpg 1x, /images/slider/slider-mob@2x-min.jpg 2x">
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <button type="button" class="right__button">
-                <svg width="25px" height="5px">
+                <svg width="40px" height="15px">
                     <use href="/images/icons/icons-sprite.svg#icon-strelkavpravo"></use>
                 </svg>
             </button>
@@ -81,28 +81,28 @@
                     </li>
                 </ul>
                 <ul class="second-image__set">
-                    <li>
+                    <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
                                 srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
                             <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
                         </picture>
                     </li>
-                    <li>
+                    <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
                                 srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
                             <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
                         </picture>
                     </li>
-                    <li>
+                    <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
                                 srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
                             <img class="bottom__photos" src="/images/slider/slider-mob2-min.jpg" alt="фото">
                         </picture>
                     </li>
-                    <li>
+                    <li class="second-image__set-item">
                         <picture class="image-triple__set">
                             <source media="(min-width: 320px)"
                                 srcset="/images/slider/slider-mob2-min.jpg 1x, /images/slider/slider-mob2@2x-min.jpg 2x">
