footer tablet ready

--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,12 @@ li {
   background-color: #fff5f6;
 }
 
+@media screen and (min-width: 768px) {
+  .footer {
+    padding-bottom: 18px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer {
     padding-bottom: 2px;
@@ -167,13 +173,19 @@ li {
   background-color: #e1e1e1;
 }
 
+@media screen and (min-width: 768px) {
+  .footer::before {
+    bottom: 68px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer::before {
     bottom: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer-markup {
     display: flex;
     flex-wrap: wrap;
@@ -187,15 +199,27 @@ li {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .footer-container-title {
+    margin-bottom: 120px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .footer-container-title {
     margin-bottom: 106px;
   }
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer-container-link {
     margin-bottom: 65px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container-link {
+    margin-left: 92px;
   }
 }
 
@@ -214,9 +238,18 @@ li {
   color: #d41443;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer-title {
     width: 200px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-title {
+    width: 340px;
+    font-size: 48px;
+    line-height: 1.145;
+    letter-spacing: 0.06em;
   }
 }
 
@@ -237,10 +270,20 @@ li {
   color: #ffa5ba;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer-suptitle {
     margin-bottom: 17px;
     width: 232px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-suptitle {
+    width: 340px;
+    margin-bottom: 16px;
+    font-size: 26px;
+    line-height: 1.153;
+    letter-spacing: 0.04em;
   }
 }
 
@@ -284,7 +327,7 @@ li {
   transition: background 250ms linear;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer-social-link {
     width: 34px;
     height: 34px;
@@ -334,7 +377,7 @@ li {
   color: #907e82;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .footer-text {
     display: block;
     width: 145px;
