--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -3,6 +3,10 @@
   padding-bottom: 25px;
   background-color: #fff5f6;
 
+  @media screen and (min-width: 768px) {
+    padding-bottom: 18px;
+  }
+
   @media screen and (min-width: 1200px) {
     padding-bottom: 2px;
   }
@@ -21,13 +25,17 @@
 
   background-color: #e1e1e1;
 
+  @media screen and (min-width: 768px) {
+    bottom: 68px;
+  }
+
   @media screen and (min-width: 1200px) {
     bottom: 30px;
   }
 }
 
 .footer-markup {
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -39,14 +47,22 @@
     margin-bottom: 43px;
   }
 
+  @media screen and (min-width: 768px) {
+    margin-bottom: 120px;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-bottom: 106px;
   }
 }
 
 .footer-container-link {
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-bottom: 65px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-left: 92px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -63,8 +79,15 @@
 
   color: #d41443;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     width: 200px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 340px;
+    font-size: 48px;
+    line-height: 1.145;
+    letter-spacing: 0.06em;
   }
 
   @media screen and (min-width: 1200px) {
@@ -83,9 +106,17 @@
 
   color: #ffa5ba;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-bottom: 17px;
     width: 232px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 340px;
+    margin-bottom: 16px;
+    font-size: 26px;
+    line-height: 1.153;
+    letter-spacing: 0.04em;
   }
 
   @media screen and (min-width: 1200px) {
@@ -129,7 +160,7 @@
 
   transition: background 250ms linear;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     width: 34px;
     height: 34px;
   }
@@ -175,7 +206,7 @@
 
   color: #907e82;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     display: block;
     width: 145px;
     text-align: center;
