change img param.

--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -64,7 +64,7 @@
   margin: 0;
   width: 100%;
   border-radius: 24px;
-  margin-top: 161px;
+  margin-top: 144px;
   max-width: 280px;
   margin-left: auto;
   margin-right: auto;
@@ -80,39 +80,42 @@
   @media screen and (min-width: 1200px) {
     width: calc((100% - 60px) / 3);
     max-width: 329px;
-    margin-top: 254px;
+    margin-top: 259px;
     &:not(:last-child) {
       margin-right: 30px;
     }
   }
   .ice-cream {
     background:getColor(background-main);
-    border-radius: 4px;
+    border-radius: 24px;
   }
   .ice-coffee {
     background: getColor(ice-coffee-backgraund);
-    border-radius: 4px;
+    border-radius: 24px;
   }
   .milkshakes {
     background: getColor(milkshakes-backgraund);
-    border-radius: 4px;
+    border-radius: 24px;
   }
   & div {
     width: 100%;
     padding-bottom: 40px;
-    padding-top: 40px;
+    @media screen and (max-width: 767px){
+      padding-top: 40px;
+    }
+    @media screen and (min-width: 1200px){
+      padding-top: 40px;
+    }
   }
 }
 .products img {
   position: absolute;
   top: -25%;
   width: 100%;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    top: -25%;
+  @media screen and (min-width: 1200px){
+    top: -40%;
   }
-  @media screen and (min-width: 1200px) {
-    top: -50%;
-  }
+
 }
 .product-item-title {
   margin: 0;
@@ -142,8 +145,8 @@
   padding: 0;
   width: 100%;
   margin-top: 30px;
-  @media screen and (min-width: 1200px) {
-    margin-top: 32px;
+  @media screen and (min-width: 768px) {
+    // margin-top: 32px;
   }
 }
 .product-description {
