Добавила адаптированые стили к остальным секциям футера

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,10 +18,12 @@
                 </button>
             </li>
         </ul>
-       
-            <h4 class="footer-title">HOMEMADE ICE CREAM <br> MADE</h4>
-            <h2 class="footer-main-title">WITH <br> PASSION</h2>
-       
+    <div class="footer-container">
+          <div>
+            <h4 class="footer-title">HOMEMADE ICE CREAM<span class="footer-title-word">MADE</span></h4>
+            <h2 class="footer-main-title">WITH <span class="main-title-word">PASSION</span></h2>
+         </div>    
+      <div>
         <ul class="footer-social-list transition">
             <li class="footer-social-item">
                 <a class="footer-social-link" href="">
@@ -51,8 +53,10 @@
                 <p class="footer-contact-name">+61 (0) 383 766 284</p>
             </a>
         </div>
+      </div>
+     </div>
         <div class="copyright">
-            <p class="copyright-text">© 2019 - IceCream. <br> All Rights Reserved.</p>
+            <p class="copyright-text">© 2019 - IceCream. <span class="copyright-text-part">All Rights Reserved.</span></p>
         </div>
     </div>
 </footer>
