--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -80,6 +80,25 @@
   color: $color-ellipse;
 
   margin-bottom: 17px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    margin-bottom: 16px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 30px;
+    line-height: 1.13;
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .footer-title-word {
+    display: block;
+  }
 }
 
 .footer-main-title {
@@ -93,12 +112,42 @@
   color: $color-accent;
 
   margin-bottom: 43px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 1.15;
+    letter-spacing: 0.06em;
+    margin-bottom: 91px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 1.14;
+    margin-bottom: 97px;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .main-title-word {
+    display: block;
+  }
+}
+
+.footer-container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .footer-social-list {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 46px;
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 50px;
+  }
 }
 
 .footer-social-item {
@@ -107,6 +156,21 @@
 
   &:not(:last-child) {
     margin-right: 28px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 34px;
+    height: 34px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  @media screen and (min-width: 1280px) {
+    &:not(:last-child) {
+      margin-right: 25px;
+    }
   }
 }
 
@@ -123,6 +187,11 @@
   &:focus {
     background-color: $color-accent;
   }
+
+  @media screen and (min-width: 768px) {
+    width: 34px;
+    height: 34px;
+  }
 }
 
 .footer-social-icon {
@@ -135,6 +204,10 @@
   display: flex;
   justify-content: flex-end;
   margin-bottom: 43px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 
 .footer-contact-text,
@@ -144,6 +217,17 @@
   font-size: 12px;
   line-height: 1.83;
   letter-spacing: 0;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.86;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.02em;
+  }
 }
 
 .footer-contact-name {
@@ -154,6 +238,14 @@
 .copyright {
   padding-bottom: 25px;
   border-top: 1px solid $color-line-galary;
+
+  @media screen and (min-width: 768px) {
+    padding-bottom: 18px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-bottom: 10px;
+  }
 }
 
 .copyright-text {
@@ -166,4 +258,20 @@
   line-height: 1.5;
   text-align: center;
   color: $color-text-grey;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 29px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding-top: 9px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .copyright-text-part {
+    display: block;
+  }
 }
