adds additional css to section, optimized images

--- a/src/partials/production.html
+++ b/src/partials/production.html
@@ -25,6 +25,7 @@
                 <br>
                 Aliquam erat volutpat. Aenean accumsan.
             </p>
+            
         </div>
         </div>
 
@@ -36,6 +37,7 @@
                 <use href="../src/images/symbol-defs.svg#icon-right"></use>
             </svg>
         </button>
+        
     
 
         <ul class="production-features">
@@ -89,6 +91,15 @@
 
     </div>
     <div class="milk">
-        <img srcset="../src/images/mobile/production/milk.png 1x, ../src/images/mobile/production/milk@2.png 2x, ../src/images/mobile/production/milk@3.png 3x" src="../src/images/mobile/production/milk.png" alt="Milk background">
+        <img srcset="
+        ../src/images/mobile/production/milk.png 1x 320w,
+        ../src/images/mobile/production/milk@2.png 2x 320w,
+        ../src/images/mobile/production/milk@3.png 3x 320w,
+        ../src/images/desktop/production/milk_1280.png 1200w,
+        ../src/images/desktop/production/milk_1280@2x.png 1200w 2x,
+        ../src/images/desktop/production/milk_1280@3x.png 1200w 3x"
+        sizes="100vw"
+        src="../src/images/mobile/production/milk.png"
+        alt="Milk background">
     </div>
 </section>
