--- a/src/sass/_production.scss
+++ b/src/sass/_production.scss
@@ -1,291 +1,289 @@
 .production {
-    padding-top: 125px;
-    padding-bottom: 145px;
-    background-color: $color-footer;
-    
-    @media screen and (min-width: 768px) {
-        padding-top: 130px;
-        padding-bottom: 240px;
-    }
+  position: relative;
+  padding-top: 125px;
+  padding-bottom: 145px;
+  background-color: $color-footer;
 
-    @media screen and (min-width: 1200px) {
-        
-        padding-bottom: 310px;
-    }       
-    
+  @media screen and (min-width: 768px) {
+    padding-top: 130px;
+    padding-bottom: 240px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 310px;
+  }
 }
 
 .production-title {
-    text-transform: uppercase;
-    font-family: 'Titan One';
-    
-    line-height: 1.16;
-    font-weight: normal;
-    
-    text-align: center;
+  text-transform: uppercase;
+  font-family: 'Titan One';
 
-    & .regular {
-        display: block;
-        font-size: 18px;
-        color: $color-ellipse;
-        margin-bottom: 15px;
+  line-height: 1.16;
+  font-weight: normal;
 
-        @media screen and (min-width: 768px) {
-            font-size: 26px;
-        }
+  text-align: center;
 
-        @media screen and (min-width: 1200px) {
-            font-size: 30px;
-        }
+  & .regular {
+    display: block;
+    font-size: 18px;
+    color: $color-ellipse;
+    margin-bottom: 15px;
 
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
     }
 
-    & .accent {
-        display: block;
-        font-size: 34px;
-        color: $color-accent;
-        letter-spacing: 0.04em;
-        margin-bottom: 25px;
-        
-        @media screen and (min-width: 768px) {
-            font-size: 48px;
-        }
-
-        @media screen and (min-width: 1200px) {
-            font-size: 58px;
-        }
-
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
     }
+  }
+
+  & .accent {
+    display: block;
+    font-size: 34px;
+    color: $color-accent;
+    letter-spacing: 0.04em;
+    margin-bottom: 25px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 58px;
+    }
+  }
 }
 
-
-
 .cow-container {
-    @media screen and (min-width:768px) {
-        display: flex;
-        
-        
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 
-    @media screen and (min-width: 1280px) {
-        align-items: flex-start;
-    }
+  @media screen and (min-width: 1280px) {
+    align-items: flex-start;
+    margin-bottom: 40px;
+  }
 }
 
 .cow {
-  
-max-width: 480px;
+  max-width: 480px;
 
-@media screen and (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     width: 340px;
- 
-}
+  }
 
-@media screen and (min-width: 1280px) {
-        width: 516px;
-}
+  @media screen and (min-width: 1280px) {
+    width: 516px;
+  }
 }
 
 .cow-image {
-    
-    @media screen and (max-width: 767px) {
-        margin-bottom: 45px;
-    }
-    display: block;
-    width: 100%;
-
-    
-    
-    
+  @media screen and (max-width: 767px) {
+    margin-bottom: 45px;
+  }
+  display: block;
+  width: 100%;
 }
 
 .description-container {
-    @media screen and (min-width:768px) {
-        display: flex;
-        flex-wrap: wrap;
-        width: 340px;
-    }
+  z-index: 3;
+  position: relative;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 340px;
+  }
 
-    @media screen and (min-width:1280px) {
-width: 463px;
-    }
+  @media screen and (min-width: 1280px) {
+    width: 463px;
+  }
 }
 
 .production-description {
-  
+  @media screen and (max-width: 767px) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 
-    @media screen and (max-width:767px) {
-        padding-left: 30px;
-        padding-right: 30px;
-    }
+  font-family: DM Sans;
+  font-size: 12px;
+  line-height: 1.62;
+  color: $color-text-grey;
+  margin-bottom: 15px;
 
-font-family: DM Sans;
-font-size: 12px;
-line-height: 1.62;
-color: $color-text-grey;
-margin-bottom: 15px;
-
-&.black {
+  &.black {
     color: $color-text-black;
     margin-bottom: 30px;
     font-weight: bold;
-   
-        }
+  }
 
-        @media screen and (min-width:768px) {
-            margin-left: 17px;
-            line-height: 1.4;
+  @media screen and (min-width: 768px) {
+    margin-left: 17px;
+    line-height: 1.4;
 
-            &.black{
-                padding-top: 50px;
-            }
-            
-            font-size: 14px;
-        }
+    &.black {
+      padding-top: 50px;
+    }
 
-        @media screen and (min-width:1280px) {
-            margin-left: 74px;
-            margin-bottom: 60px;
+    font-size: 14px;
+  }
 
-            &.black {
-                margin-bottom: 35px;
-            }
-        }
+  @media screen and (min-width: 1280px) {
+    margin-left: 74px;
+    margin-bottom: 60px;
+
+    &.black {
+      margin-bottom: 35px;
+    }
+  }
 }
 
 .button {
-    @include button ($color-text-white, $color-accent, 44px);
-    text-decoration: none;
+    z-index: 5;
+  @include button($color-text-white, $color-accent, 44px);
+  text-decoration: none;
 
-    display: flex;
-    justify-content: space-between;
-    align-items:center ;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    position: relative;
-    width: 176px;
+  position: relative;
+  width: 176px;
 
-    padding-right: 35px;
-    margin-left: 30px;
-    margin-bottom: 40px;
+  padding-right: 35px;
+  margin-left: 30px;
+  margin-bottom: 40px;
 
-    & .button-text {
-        font-family: DM Sans;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.3;
-        text-transform: capitalize;
-    }
+  & .button-text {
+    font-family: DM Sans;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.3;
+    text-transform: capitalize;
+  }
 
-    & svg {
-        fill: currentColor ;
-        
-    }
+  & svg {
+    fill: currentColor;
+  }
 
-    &:hover, &:focus {
-        background-color: $color-btn-footer;
-        color: $color-text-white;
-        @include transition(background-color);
-    }
+  &:hover,
+  &:focus {
+    background-color: $color-btn-footer;
+    color: $color-text-white;
+    @include transition(background-color);
+  }
 
-    @media  screen and (min-width: 768px) {
-       margin-left: 340px;
+  @media screen and (min-width: 768px) {
+    margin-left: 340px;
+  }
 
-    }
-
-    @media  screen and (min-width: 1280px) {
-        margin-left: 550px;
-        margin-top: -150px;
- 
-     }
+  @media screen and (min-width: 1280px) {
+    margin-left: 550px;
+    margin-top: -150px;
+  }
 }
 
 .production-features {
-    
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
-    list-style: none;
+  list-style: none;
 
-    
-    & > li:not(:last-child) {
-        @media screen and (max-width: 767px){
-        margin-bottom: 38px;
-        }
+  & > li:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 38px;
     }
+  }
 
-    @media screen and (min-width: 768px) {
-        display: flex;
-        align-items: baseline;
-    }
-       
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+  }
+
+  @media screen and (min-width: 1280px) {
+  margin-top: 150px;
+  }
 }
 
 .production-features-list {
-    position: relative;
-    list-style: none;
+  position: relative;
+  list-style: none;
 
-    @media screen and (min-width:768px) {
-       
-        width: calc(100% - 6 * 30px / 3);
-    }
+  @media screen and (min-width: 768px) {
+    width: calc(100% - 6 * 30px / 3);
+  }
 
-    @media screen and (min-width:1280px) {
-       
-        width: calc(100% - 6 * 15px / 3);
-    }
-
+  @media screen and (min-width: 1280px) {
+    width: calc(100% - 6 * 15px / 3);
+  }
 }
 
-.features-list-icon  {
+.features-list-icon {
+  &1,
+  &2,
+  &3 svg {
+    fill: $color-ellipse;
+  }
 
-    &1, &2, &3 svg {
-        fill: $color-ellipse;
-    }
-
-    &1  {
-        margin-left: -5px;
-       margin-bottom: -10px;
-    }
-
-   }
-
-
+  &1 {
+    margin-left: -5px;
+    margin-bottom: -10px;
+  }
+}
 
 .features-list-item {
-    position: relative;
-    margin-bottom: 15px;
+  position: relative;
+  margin-bottom: 15px;
 
-font-family: Titan One;
+  font-family: Titan One;
 
-font-size: 36px;
-line-height: 1.14;
-letter-spacing: 0.04em;
-text-transform: uppercase;
+  font-size: 36px;
+  line-height: 1.14;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 
-color: $color-accent;
+  color: $color-accent;
 
-@media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
     margin-top: 36px;
-}
+  }
 
-@media screen and (min-width:1280px) {
+  @media screen and (min-width: 1280px) {
     margin-top: 40px;
-}
-
-    
+  }
 }
 
 .features-list-description {
-    font-family: DM Sans;
-    
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 1.7;  
-    color: $color-text-black;
+  font-family: DM Sans;
 
-    
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.7;
+  color: $color-text-black;
 }
 
 .milk {
-  
+  position: absolute;
+  z-index: 0;
+  pointer-events: none;
+
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 790px;
+  width: 320px;
+
+  @media screen and (min-width: 768px) and (max-width: 1279px) {
+    display: none;
+  }
+
+    @media screen and (min-width: 1280px) {
+        width: 1280px;        
+        bottom: 500px;
+    }
+}
+
+.milk img {
+  width: 100%;
+  height: auto;
 }
