Изменил размеры иконок

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
   
     <div class="footer-text">
       <p class="footer-row">homemade ice cream made</p>
@@ -34,4 +34,4 @@
       <p class="copyright">&copy 2019 - IceCream. All Rights Reserved.</p>
     </div>
  
-</footer>
+</footer> -->
