--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -6,7 +6,7 @@
 
   padding-top: 6px;
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     padding-top: 37px;
   }
 }
@@ -16,7 +16,7 @@
   justify-content: space-between;
   align-items: center;
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     justify-content: flex-start;
     align-items: center;
   }
@@ -27,7 +27,7 @@
 }
 
 .navigation-btn {
-  @media screen and (max-width: 767px) {
+  @include for-size(mobile-only) {
     display: none;
   }
 
@@ -54,11 +54,11 @@
 }
 
 .menu-open-btn {
-  @media screen and (min-width: 1200px) {
+  @include for-size(desktop) {
     display: none;
   }
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     margin-right: 30px;
     margin-left: auto;
   }
@@ -71,12 +71,8 @@
   background-color: transparent;
 }
 
-.icon-burger {
-  fill: $titleTextColor;
-}
-
 .mobile-menu {
-  @media screen and (max-width: 1199px) {
+  @include for-size(mobile-tablet) {
     position: fixed;
     top: 0;
     right: 0;
@@ -103,14 +99,14 @@
 
     z-index: 5;
 
-    @media screen and (min-width: 768px) {
+    @include for-size(tablet) {
       width: 254px;
     }
   }
 }
 
 .mobile-container {
-  @media screen and (min-width: 1200px) {
+  @include for-size(desktop) {
     display: none;
   }
 }
@@ -128,13 +124,9 @@
 
   background-color: transparent;
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     right: 34px;
   }
-}
-
-.icon-close {
-  fill: $primaryWhiteColor;
 }
 
 .mobile-btn {
@@ -153,7 +145,7 @@
   text-align: center;
   color: $titleTextColor;
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     width: 186px;
   }
 }
@@ -162,9 +154,13 @@
   fill: $titleTextColor;
   margin-left: 16px;
 
-  @media screen and (min-width: 768px) {
+  @include for-size(tablet) {
     margin-left: 14px;
   }
+}
+
+.mobile-list {
+  display: block;
 }
 
 .mobile-item {
