--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -84,13 +84,13 @@
 }
 
 .hero-counter-box {
-  @media screen and (max-width: 767px) {
+  @include for-size(mobile-only) {
     display: none;
   }
 }
 
 .hero-text-box {
-  @media screen and (max-width: 767px) {
+  @include for-size(mobile-only) {
     display: none;
   }
 }
