--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,15 +28,17 @@
       </nav>
 
       <button class="menu-open-btn" type="button" data-menu-button>
-        <svg class="icon-burger" width="32" height="32">
-          <use href="./images/icons/symbol-defs.svg#menu-burger"></use>
+        <svg class="icon-burger" width="20" height="20">
+          <use href="./images/icons/symbol-defs.svg#icon-burger"></use>
         </svg>
       </button>
 
       <button class="navigation-btn" type="button">
         Buy now
-        <svg class="navigation-btn-icon" width="5" height="8">
-          <use href="./images/icons/symbol-defs.svg#chevron-right"></use>
+        <svg class="navigation-btn-icon" width="16" height="8">
+          <use
+            href="./images/icons/symbol-defs.svg#icon-half-arrow-right"
+          ></use>
         </svg>
       </button>
     </div>
@@ -44,14 +46,16 @@
     <div class="mobile-menu mobile-container" data-menu>
       <button type="button" class="menu-close-btn" data-menu-close>
         <svg class="icon-close" width="14" height="14">
-          <use href="./images/icons/symbol-defs.svg#menu-cross"></use>
+          <use href="./images/icons/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
 
       <button class="mobile-btn" type="button">
         Buy now
-        <svg class="mobile-btn-icon" width="5" height="8">
-          <use href="./images/icons/symbol-defs.svg#chevron-right"></use>
+        <svg class="mobile-btn-icon" width="16" height="8">
+          <use
+            href="./images/icons/symbol-defs.svg#icon-half-arrow-right"
+          ></use>
         </svg>
       </button>
 
