--- a/src/sass/utils/_mixsin.scss
+++ b/src/sass/utils/_mixsin.scss
@@ -1,7 +1,7 @@
 @mixin for-size($range) {
   $mobile: 320px;
-  $tablet: 740px;
-  $desktop: 1090px;
+  $tablet: 768px;
+  $desktop: 1200px;
 
   @if $range == mobile-only {
     @media screen and (max-width: #{$tablet - 1}) {
@@ -21,6 +21,10 @@
     }
   } @else if $range == desktop {
     @media screen and (min-width: $desktop) {
+      @content;
+    }
+  } @else if $range == mobile-tablet {
+    @media screen and (max-width: #{$desktop - 1}) {
       @content;
     }
   }
