--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -46,7 +46,7 @@
   text-transform: uppercase;
   font-weight: 400;
   font-size: 26px;
-  line-height: 1.14;
+  line-height: 1.1;
   color: $main-white-color;
 
   position: relative;
@@ -108,7 +108,8 @@
   display: block;
   background-color: $main-white-color;
   border-radius: 20px;
-  padding: 10px 15px;
+  outline: 0;
+  padding: 7px 10px;
 
   font-size: 8px;
   font-weight: 400;
@@ -125,7 +126,7 @@
 
   @media screen and (min-width: $desktop) {
     font-size: 14px;
-    padding: 13px 20px;
+    padding: 10px 15px;
   }
 }
 
@@ -147,7 +148,7 @@
   animation-delay: -1s;
 
   @media screen and (max-width: $mobile-max) {
-    bottom: -40%;
+    bottom: -41%;
     left: 63%;
     transform: translate(-50%, -50%);
   }
@@ -206,6 +207,7 @@
     align-content: flex-end;
 
     width: 115px;
+
     font-size: 8px;
     line-height: 1.4;
     color: $main-white-color;
