--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1001,7 +1001,7 @@ html {
   text-transform: uppercase;
   font-weight: 400;
   font-size: 26px;
-  line-height: 1.14;
+  line-height: 1.1;
   color: #ffffff;
   position: relative;
   z-index: 5;
@@ -1081,7 +1081,8 @@ html {
   display: block;
   background-color: #ffffff;
   border-radius: 20px;
-  padding: 10px 15px;
+  outline: 0;
+  padding: 7px 10px;
   font-size: 8px;
   font-weight: 400;
   line-height: 1.3;
@@ -1097,7 +1098,7 @@ html {
 @media screen and (min-width: 1200px) {
   .hero-button {
     font-size: 14px;
-    padding: 13px 20px;
+    padding: 10px 15px;
   }
 }
 
@@ -1117,7 +1118,7 @@ html {
 
 @media screen and (max-width: 767px) {
   .hero-img {
-    bottom: -40%;
+    bottom: -41%;
     left: 63%;
     transform: translate(-50%, -50%);
   }
