--- a/src/sass/layouts/_location.scss
+++ b/src/sass/layouts/_location.scss
@@ -11,6 +11,9 @@
     flex-wrap: wrap;
     margin-left: -20px;
   }
+  @include for-size(desktop) {
+    margin-left: -30px;
+  }
 
   & .card {
     max-width: 220px;
@@ -31,7 +34,17 @@
 
     @include for-size(tablet) {
       margin-left: 20px;
-      width: calc((100% / 3) - 20px);
+      min-width: 220px;
+      max-width: calc((100% / 3) - 20px);
+
+      font-size: 14px;
+    }
+    @include for-size(desktop) {
+      margin-left: 30px;
+      max-width: 330px;
+      max-width: calc((100% / 3) - 30px);
+
+      font-size: 14px;
     }
 
     & .description {
@@ -46,10 +59,20 @@
     @include for-size(tablet) {
       margin-bottom: 60px;
     }
+    @include for-size(desktop) {
+      margin-bottom: 64px;
+    }
   }
 
   & .title-card-location {
     margin-bottom: 10px;
+
+    @include for-size(tablet) {
+      margin-bottom: 14px;
+    }
+    @include for-size(desktop) {
+      margin-bottom: 10px;
+    }
   }
 
   & .work-time {
