adds margins on icons in feature-list

--- a/src/sass/_production.scss
+++ b/src/sass/_production.scss
@@ -220,16 +220,25 @@
 }
 
 .features-list-icon {
+
+  &1, &2, &3 {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+    }
+  }
   &1,
   &2,
   &3 svg {
     fill: $color-ellipse;
+    
   }
 
   &1 {
     margin-left: -5px;
-    margin-bottom: -10px;
+    margin-bottom: 0px;
   }
+
+  
 }
 
 .features-list-item {
@@ -270,7 +279,7 @@
 
   left: 50%;
   transform: translateX(-50%);
-  bottom: 790px;
+  bottom: 815px;
   width: 320px;
 
   @media screen and (min-width: 768px) and (max-width: 1279px) {
