--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -15,9 +15,7 @@ letter-spacing: 0.08em;
 color: #111518;
 position: relative;
 }
-.choose-list-item:not(:last-child){
-    margin-bottom: 20px;
-}
+
 .choose-list-item .accent-line::before{
     content: "";
     display: block;
@@ -38,19 +36,27 @@ position: relative;
     -webkit-transform: translateX(130%);
     transform: translateX(130%);
 }
-@media screen and (min-width:768px) {
+
+@media screen and (max-width:767px){
+    .choose-list-item:not(:last-child){
+        margin-bottom: 20px;
+    }
+}
+@media screen and (min-width:768px)  and (max-width:1343px){
     .choose{
         width: 688px;
         padding-top: 30px;
         padding-bottom: 30px;
         padding-left: 98px;
+        padding-right: 118px;
     }
     .choose-list{
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: space-between;
     }
-    .choose-list-item:not(:last-child){
+    .choose-list-item:nth-child(-n+4){
     margin-bottom: 30px;
     }
     .choose-list-item{
@@ -61,14 +67,18 @@ position: relative;
     .choose{
     width: 1314px;
     padding: 70px 80px;
-justify-content: space-between;
     }
     .choose-list{
     display:flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: space-between;
 }
 .choose-list-item{
     flex-basis: calc(100%/3 - 20px);
 }
+.choose-list-item:nth-child(-n+3){
+    margin-bottom: 32px;
+    }
 }
+    
