прописал ІД, уюрал мигалку геро

--- a/src/partials/our-programm.html
+++ b/src/partials/our-programm.html
@@ -1,4 +1,4 @@
-<section class="our-programm-section section ">
+<section class="our-programm-section section" id="our-programm">
     <div class="dop-contener">
         <div class="container ">
             <div class="our-programm">
@@ -82,7 +82,7 @@
                 </div>
             </div>
         
-            <div class="why-we">
+            <div class="why-we" id="variant">
                 <H2 class="why-we__h2">Почему нас выбирают</H2>
                 <ul class="why-we__list">
                     <li class="why-we__item">
