--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -7,8 +7,7 @@
                 <li class="footer__list--item footer__logo">
                     <a href="./index.html">
                         <svg class="footer__logo--svg">
-                            <use href="./icons/footer-sprite.svg#footer-logo"></use>
-                    </a>
+                            <use href="./icons/footer-sprite.svg#footer-logo"></use></svg>
                 </li>
                 <li class="footer__list--item footer__phone">
                     <svg class="footer__phone--svg">
