--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -32,8 +32,8 @@
 }
 
 .hero__title {
-  animation: blur 0.75s ease-out infinite;
-  color: $black;
+  // animation: blur 0.75s ease-out 33;
+  // color: $black;
   @include font(800, 20px, 27px, inherit, 0.03em);
   &:hover {
     cursor: pointer;
