--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -1,14 +1,59 @@
 .form{
-    background-color: black;
-
-    // background-image: 
-    // linear-gradient(rgba(17, 21, 24, 0.7), rgba(17, 21, 24, 0.7)),
-    // url("../Images/Hero/Form/bg-mobile.jpg");
-    
-    background-position: center;
+    background-image: url("../Images/Hero/Form/bg-mobile.png");
+    background-color: rgba(17, 21, 24, 1);
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+@media screen and (min-device-pixel-ratio: 2)and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 320px),
+  screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    .form{
+        background-image: url("../Images/Hero/Form/bg-mobile@2x.png");
+        background-color: rgba(17, 21, 24, 1);
+    }
+  }
+
+  @media screen and (min-width: 768px){
+    .form{
+        background-image: url("../Images/Hero/Form/bg-tablet.png");
+        background-color: rgba(17, 21, 24, 1);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .form {
+    background-image: url("../Images/Hero/Form/bg-tablet@2x.png");
+    background-color: rgba(17, 21, 24, 1);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 1200px){
+    .form{
+        background-image: url("../Images/Hero/Form/bg-desktop.png");
+        background-color: rgba(17, 21, 24, 1);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+screen and (min-resolution: 192dpi) and (min-width: 1200px),
+screen and (min-resolution: 2dppx) and (min-width: 1200px){
+    .form {
+        background-image: url("../Images/Hero/Form/bg-desktop@2x.png");
+        background-color: rgba(17, 21, 24, 1);
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+}
+
 
 .form-title{
     color: rgb(255, 255, 255);
@@ -75,8 +120,8 @@
     height: 48px;
     width: 100%;
     background: rgba(255, 255, 255, 1);
-    background: rgba( 0,0,0, 0.6);
-    border: 1px solid rgba(255, 255, 255, 1);
+    background: rgba( 0,0,0, 0.1);
+    border: 2px solid rgba(255, 255, 255, 1);
     padding-left: 28px;
     
     font-style: normal;
@@ -84,7 +129,7 @@
     font-size: 14px;
     line-height: 1.214;
     letter-spacing: 0.08em;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 1);
 
     @media screen and (min-width: 768px) {
         width: 390px;
