--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,9 +35,9 @@
                     </span>
                 </b>
             </div>
-        <hr class="line"/>
-        <div class="footer__copyright">
-            <p>&copy 2019 - IceCream. All Rights Reserved.</p>
-        </div>
+            <div class=hr_line></div>
+            <div class="footer__copyright">
+                <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+            </div>
     </div>
 </footer>
