--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -14,7 +14,7 @@
     width: 34px;
     height: 34px;
     border-radius: 50%;
-    background-color: #fea5bb;
+    background-color: $light-pink-color;
   }
 
   .social {
@@ -25,8 +25,7 @@
 
   .icon-social:hover,
   .icon-social:focus {
-    background-color: #d41443;
-    //color: blue;
+    background-color: $main-red-color;
   }
 
   .footer__first-title {
@@ -44,7 +43,7 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
-    color: #ffa5ba;
+    color: $dark-pink-color;
   }
 
   .footer__second-title {
@@ -113,13 +112,17 @@
     color: $main-grey-color;
   }
 
-  .line {
-    width: 99%;
-    size: 4px;
-    color: $main-grey-color;
+  .hr_line {
+    border-top: solid 1px grey;
     position: absolute;
+    width: 1280px;
+    margin-left: 0px;
     top: 5135px;
   }
+
+  // .footer {
+  // width: 1280px;
+  // }
 }
 
 @media screen and (max-width: 1199px) {
@@ -225,7 +228,7 @@
   .footer__copyright {
     position: absolute;
     height: 26px;
-    padding-left: 246px;
+    margin-left: 248px;
     top: 4539px;
     text-align: center;
 
@@ -240,13 +243,17 @@
     color: $main-grey-color;
   }
 
-  .line {
-    width: 90%;
-    size: 4px;
-    color: $main-grey-color;
+  .hr_line {
+    border-top: solid 1px grey;
     position: absolute;
+    width: 768px;
+    margin-left: 0px;
     top: 4510px;
   }
+
+  // .footer {
+  //   width: 772px;
+  // }
 }
 
 @media screen and (max-width: 767px) {
@@ -353,7 +360,7 @@
     width: 150px;
     height: 42px;
     padding-left: 0;
-    margin-left: 25%;
+    margin-left: 79px;
     top: 7049px;
 
     font-family: DM Sans;
@@ -367,11 +374,15 @@
     color: $main-grey-color;
   }
 
-  .line {
-    width: 90%;
-    size: 4px;
-    color: $main-grey-color;
+  .hr_line {
+    border-top: solid 1px grey;
     position: absolute;
+    width: 320px;
+    margin-left: 0px;
     top: 7027px;
   }
+
+  // .footer {
+  //   width: 320px;
+  // }
 }
