--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="footer" class="footer">
   <div class="footer-container">
     <div class="fotter-first-container">
       <h2 class="footer-title">homemade ice cream made</h2>
