--- a/src/partials/howIItsMade.html
+++ b/src/partials/howIItsMade.html
@@ -1,4 +1,4 @@
-<section class="made">
+<section id="howltsMade" class="made">
     <div class="made-container">
 
         <p class="made-traditional made-titan">tradition and love</p>
