Work with reviews slider

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,7 +1,7 @@
 <section class="reviews" id="reviews">
   <div class="container">
-    <ul class="list slick-reviews">
-      <li class="item">
+    <ul class="list slick-slider">
+      <li class="item slider-item">
         <img
           class="img"
           src="./images/reviews/reviews-1@1x.png"
@@ -9,14 +9,45 @@
         />
         <div class="text-wrap">
           <p class="text">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-            ipsum primis in nibh vel risus.
+            Ice cream is the perfect treat for any season. In the summer, you
+            can cool off from a delicious scoop of your favorite flavor of ice
+            cream and in the winter, you can bring out the best in the cold
+            weather by enjoying your favorite slice of hot pie accompanied by
+            your favorite flavor of ice cream.
           </p>
         </div>
-        <p class="name">Emily, Los Angeles</p>
+        <ul class="reviews-dots">
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+        </ul>
+        <p class="reviews-name">Emily, Los Angeles</p>
       </li>
-      <li class="item">
+      <li class="item slider-item">
         <img
           class="img"
           src="./images/reviews/reviews-2@1x.png"
@@ -24,14 +55,44 @@
         />
         <div class="text-wrap">
           <p class="text">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-            ipsum primis in nibh vel risus.
+            When you’re sad, a big bowl of ice cream will be there to cheer you
+            up. The silk-smooth bowl of ice cream is scientifically proven to
+            help make breakups, heartaches, and other major causes of sadness
+            easier to get through.
           </p>
         </div>
-        <p class="name">Rose, California</p>
+        <ul class="reviews-dots">
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+        </ul>
+        <p class="reviews-name">Rose, California</p>
       </li>
-      <li class="item">
+      <li class="item slider-item">
         <img
           class="img"
           src="./images/reviews/reviews-3@1x.png"
@@ -44,7 +105,36 @@
             ipsum primis in nibh vel risus.
           </p>
         </div>
-        <p class="name">Emma, Washington</p>
+        <ul class="reviews-dots">
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+          <li class="dots-item">
+            <svg>
+              <use
+                href="./images/icons/symbol-defs.svg#icon-ellipse"
+                width="5"
+                height="5"
+              ></use>
+            </svg>
+          </li>
+        </ul>
+        <p class="reviews-name">Emma, Washington</p>
       </li>
     </ul>
   </div>
