--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,6 +1,7 @@
-
-<form class="form">
-    <div class="container"><p class="form-text">Регистрация на <span class="form-text-color">бесплатную </span>телефонную
+<section class="form">
+    <div class="container">
+<form class="formng">
+    <p class="form-text">Регистрация на <span class="form-text-color">бесплатную </span>телефонную
         <span class="form-text-color">консультацию</span> по нюансам ЗНО
         по английскому языку
     </p>
@@ -10,6 +11,8 @@
         <input type="text" name="user-name" placeholder="Имя*" class="form-input">
         <input type="tel" name="user-tel" placeholder="Телефон*" class="form-input">
         <button type="submit" class="form-button">хочу на бесплатное занятие</button>
-    </div></div>
+    </div>
      
 </form>
+</div>
+</section>
