--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -6,6 +6,8 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: 320px 507px;
+  margin-left: auto;
+  margin-right: auto;
   &-text {
     font-family: Montserrat;
     font-weight: 800;
