--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -41,6 +41,12 @@ li {
   font-style: normal;
 }
 
+button {
+  padding: 0;
+  border: 0;
+  font-family: $main-font;
+}
+
 // .section {
 //   padding-top: 20px;
 //   padding-bottom: 20px;
