--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -44,3 +44,64 @@
     letter-spacing: 0.04em;
   }
 }
+
+/* --------------КНОПКИ БОЛЬШИЕ---------------------*/
+
+// класс размеров
+
+.dont-worry {
+  background-color: aqua;
+}
+
+.btn {
+  min-width: 161px;
+  padding: 0 17px;
+  height: 44px;
+  border-radius: 22px;
+
+  //text-align: center;
+
+  /* сюда нужно проставить правильный класс 
+  для всплывающего окна хедера*/
+  header & {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 0 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 0 37px;
+    // размер всех кнопок меняется. паддинг 35-37px
+  }
+
+  & span {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.31;
+
+    &::after {
+      margin-left: 10px;
+      content: '>';
+    }
+  }
+
+  // ">" - это явно не рисунок
+  /*& svg {
+    width: 3.61px;
+    height: 100%;
+    stroke: #000000;
+  }*/
+}
+
+//классы цветов
+.appeal-one {
+  background: #d41342; //привязать к базовым цветам
+  color: #ffffff; //привязать к базовым цветам
+}
+
+.appeal-two {
+  background: #ffffff; //привязать к базовым цветам
+  color: #d41443; //привязать к базовым цветам
+}
