--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,8 @@
 @import './base/common';
 @import './base/container';
 
+@import './components/components';
+
 @import './layout/header';
 @import './layout/hero';
 @import './layout/products';
