--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,12 @@ li {
   font-style: normal;
 }
 
+button {
+  padding: 0;
+  border: 0;
+  font-family: "DM Sans", sans-serif;
+}
+
 .container {
   width: 1280px;
   margin: 0 auto;
@@ -87,6 +93,116 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/*---------------- ЗАГОЛОВОК УРОВНЯ h2 -------------------*/
+.titul-two {
+  text-align: center;
+  margin-top: 15px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+}
+
+@media screen and (min-width: 768px) {
+  .titul-two {
+    font-size: 48px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .titul-two {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
+}
+
+.pretitul-two {
+  text-align: center;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  color: #ffa5ba;
+}
+
+@media screen and (min-width: 768px) {
+  .pretitul-two {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .pretitul-two {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
+}
+
+/* --------------КНОПКИ БОЛЬШИЕ---------------------*/
+.dont-worry {
+  background-color: aqua;
+}
+
+.btn {
+  min-width: 161px;
+  padding: 0 17px;
+  height: 44px;
+  border-radius: 22px;
+  /* сюда нужно проставить правильный класс 
+  для всплывающего окна хедера*/
+  /*& svg {
+    width: 3.61px;
+    height: 100%;
+    stroke: #000000;
+  }*/
+}
+
+header .btn {
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .btn {
+    padding: 0 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .btn {
+    padding: 0 37px;
+  }
+}
+
+.btn span {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.31;
+}
+
+.btn span::after {
+  margin-left: 10px;
+  content: '>';
+}
+
+.appeal-one {
+  background: #d41342;
+  color: #ffffff;
+}
+
+.appeal-two {
+  background: #ffffff;
+  color: #d41443;
 }
 
 .review {
